# Hack-a-duck

./: .gitignore  CMakeLists.txt  Makefile  README.md
headers/: main.h
src/: Button.cpp  MainWindow.cpp  main  main.cpp
src/MainGameplay/: Cat.cpp  Cat.h  Duck.cpp  Duck.h  MainGameplay.h  Path.cpp  Path.h  Player.cpp  Player.h  Vector.h  Vector2.h  wavebar.h
src/MainMenu/: Menu.cpp  Menu.h
src/User Interface/: Button.cpp  Button.h  MainWindow.cpp
src/UserInterface/: Button.cpp  Button.h  MainWindow.cpp  MainWindow.h  Menu.cpp  Menu.h  Menurgrgrg.h  Mouse.cpp  Mouse.h  Sound.h  Texture.h  TextureManager.cpp  TextureManager.h
src/headers/: MainWindow.h
